--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,19 @@ html.dark {
 .borderBlack {
   @apply border border-black/10;
 }
+
+::-webkit-scrollbar,
+::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #a5a5a5;
+  border: 0;
+  background-clip: padding-box;
+  border-radius: 5px;
+}
